--- a/frontend/src/app/Admin/order-table/orderTable.component.html
+++ b/frontend/src/app/Admin/order-table/orderTable.component.html
@@ -5,10 +5,12 @@
     </label>
   </div>
 
-  <table class= 'table table-sm'>
+  <table class= 'table'>
       <thead>
           <tr>
-              <th> Customer Name </th> ZIP code <th> <th colspan="2" > Cart </th> <th> </th>
+              <th> Customer Name </th>
+              <th> ZIP code </th>
+              <th> Cart </th>
           </tr>
       </thead>
       <tbody>
@@ -17,10 +19,13 @@
                 There are no orders
               </td>
           </tr>
-          <ng-template *ngFor let-o [ngForOf] = 'getOrders()'>
+
+          <ng-template ngFor let-o [ngForOf]='getOrders()'>
               <tr>
-                  <td> {{ o.name}} </td> <td> {{ o.zip }} </td>
-                  <th> Product </th> <th>Quantity </th> 
+                  <td> {{ o.name }} </td>
+                  <td> {{ o.zipCode }} </td>
+                  <th> Product </th>
+                  <th>Quantity </th> 
                   <td>
                       <button class='btn btn-warning' (click) = 'markShipped(o)'>
                         Ship
@@ -31,9 +36,9 @@
                   </td>
               </tr>
               <tr *ngFor = 'let line of o.cart.lines'>
-                  <td> {{line.product.name }} </td> <td>  {{ line.product.quantity }} </td> 
+                  <td> {{line.prod.name }} </td>
+                <td>{{ line.quantity }} </td> 
               </tr>
           </ng-template>
       </tbody>
-
   </table>
