--- a/frontend/src/app/Admin/product-editor/productEditor.component.html
+++ b/frontend/src/app/Admin/product-editor/productEditor.component.html
@@ -5,7 +5,7 @@
 <form novalidate #form='ngForm' (ngSubmit)='save(form)'>
     <div class='form-group'>
         <label> ID </label>
-        <input class='form-control' name='id' [(ngModel)]='product.id' />
+        <input class='form-control' name='productId' [(ngModel)]='product.productId' />
     </div>
     <div class='form-group'>
         <label> Name </label>
