add mapping for delete, update

--- a/frontend/src/app/Admin/order-table/orderTable.component.html
+++ b/frontend/src/app/Admin/order-table/orderTable.component.html
@@ -30,7 +30,7 @@
                       <button class='btn btn-warning' (click) = 'markShipped(o)'>
                         Ship
                       </button>
-                      <button class='btn btn-danger' (click) = 'deleteOrder(o.id)'>
+                      <button class='btn btn-danger' (click) = 'deleteOrder(o.orderId)'>
                         Delete
                       </button>
                   </td>
