--- a/frontend/src/app/Admin/product-editor/productEditor.component.html
+++ b/frontend/src/app/Admin/product-editor/productEditor.component.html
@@ -3,10 +3,12 @@
 </div>
 
 <form novalidate #form='ngForm' (ngSubmit)='save(form)'>
-    <div class='form-group'>
+
+    <div class='form-group '>
         <label> ID </label>
-        <input class='form-control' name='productId' [(ngModel)]='product.productId' />
+        <input class='form-control' name='productId' [(ngModel)]='product.productId'  readonly/>
     </div>
+
     <div class='form-group'>
         <label> Name </label>
         <input class='form-control' name='name' [(ngModel)]='product.name' />
