--- a/frontend/src/app/Admin/product-editor/productEditor.component.html
+++ b/frontend/src/app/Admin/product-editor/productEditor.component.html
@@ -1,4 +1,4 @@
-<div class='bg-primary p-2 text-whilte' [class.bg.warning]='editing' [class.text-dark]='editing'>
+<div class=' p-2 '>
     <h4> {{ editing ? 'Edit' : 'Create' }} Product </h4>
 </div>
 
