--- a/frontend/src/app/Store/cart-summary/cart-summary.component.html
+++ b/frontend/src/app/Store/cart-summary/cart-summary.component.html
@@ -1,5 +1,5 @@
 
-<div class= 'float-right'>
+<div class= 'float-left'>
     <small>
         Your Cart:
         <span *ngIf= 'cart.itemCount > 0'>
@@ -11,7 +11,7 @@
         </span>
     </small>
 
-    <button class='btn btn-sm bg-dark text-white' [disabled]= 'cart.itemCount == 0'> 
+    <button class='btn btn-sm ' [disabled]= 'cart.itemCount == 0'> 
         <i class='fa fa-shopping-cart'> </i>
     </button>
 </div>
