--- a/frontend/src/app/Admin/product-editor/productEditor.component.html
+++ b/frontend/src/app/Admin/product-editor/productEditor.component.html
@@ -26,6 +26,10 @@
         <label> Price </label>
         <input class='form-control' name='price' [(ngModel)]='product.price' />
     </div>
+    <div class='form-group'>
+        <label> Photo </label>
+        <input class='form-control' name='img' [(ngModel)]='product.img' />
+    </div>
 
     <button type="submit" class='btn btn-primary' [class.btn-warning]='editing'>
         {{ editing ? 'Save' : 'Create' }}
